# sp-foundation

./: .gitignore  CMakeLists.txt  README.md  apollo.sln  apollo.vcxproj  apollo.vcxproj.filters  build-linux.sh  build-windows.bat  sp-doundation.sln  sp-foundation.vcxproj  sp-foundation.vcxproj.filters
src/: Assertions.h  BasePlatform.h  ColorRGB.h  ColorRGBA.h  DisplayDevice.cpp  DisplayDevice.h  DisplayDeviceGLFW.cpp  DisplayDeviceGLFW.h  DisplayDeviceQT.cpp  DisplayDeviceQT.h  Disposable.h  Factory.h  FileLinux.cpp  FileLinux.h  FileManagerLinux.cpp  FileManagerLinux.h  FileManagerWindows.cpp  FileManagerWindows.h  FileSystem.h  FileWindows.cpp  FileWindows.h  HttpConnection.cpp  HttpConnection.h  HttpConnectionManager.cpp  HttpConnectionManager.h  HttpOperationResult.cpp  HttpOperationResult.h  IEquatable.h  IFile.h  IFileManager.h  ISubSystem.h  Image.cpp  Image.h  ImageBMP.cpp  ImageBMP.h  ImageFactory.h  ImageJPEG.cpp  ImageJPEG.h  ImagePNG.cpp  ImagePNG.h  (+123 more)
test/: sp-foundation-test.vcxproj  sp-foundation-test.vcxproj.filters
test/src/: PoolAllocatorTest.cpp  SpArrayOfStringTest.cpp  SpArrayTest.cpp  SpMapTest.cpp  SpQueueTest.cpp  SpStringTest.cpp  SpTextTest.cpp  SpVectorTest.cpp  SpectrumFoundationTest.cpp  SpectrumFoundationTest.h
